finished lab 14, lab 15 is lab 14

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@
 /p1119a/build/
 /hw11/nbproject/private/
 /hw11/build/
+/lab14/nbproject/private/
+/lab14/build/
+/lab15/nbproject/private/
+/lab15/build/
